feat: add paged loading endpoint
Adds an endpoint for loading paged log content, and HTMX interactivity
to allow it to render as an infinite scroll element.
